<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity1"
    android:background="@drawable/background_signs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginBottom="2dp"

        >

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/logo_hopevoice_white"
            android:text="@string/logo_name"
            android:textColor="@color/colorWhite"
            android:textSize="30dp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/label"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_white"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/colorred"
            android:textSize="18dp"
            android:layout_marginBottom="5dp"/>



        <Button
            android:id="@+id/btsignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_transparent"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>