<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signs"
    tools:context=".activity.signup">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:padding="30dp"

            >

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="157dp"
                android:layout_height="143dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/logo_hopevoice_white" />

            <EditText
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/login"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/cpwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/cpassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btsignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_white"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/colorred"
                android:textSize="18dp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>