<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signs"
    tools:context=".activity.login">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-18dp"
        tools:layout_editor_absoluteY="-124dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:padding="30dp"
            android:id="@+id/linearLayout"

            >

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="157dp"
                android:layout_height="143dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/logo_hopevoice_white" />

            <LinearLayout
                android:id="@+id/LayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorWhite"
                    android:drawableLeft="@drawable/ic_action_login"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/colorWhite"
                    android:drawableLeft="@drawable/ic_action_pwd"
                    android:gravity="right"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btlogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_white"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@color/colorred"
                android:textSize="18dp" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:text="أو"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btlogingoogle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="تسجيل الدخول بحساب غوغل"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_red"
                android:textSize="18dp" />

            <Button
                android:id="@+id/register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/text_not_member"
                android:textColor="@color/colorWhite"
                android:textSize="16dp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>